<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrimeActivity">

    <Button
        android:id="@+id/findPrimesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_primes"
        app:layout_constraintBottom_toTopOf="@+id/pacifierCheckBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primeTerminateButton" />

    <Button
        android:id="@+id/primeTerminateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminate_search"
        app:layout_constraintBottom_toTopOf="@+id/findPrimesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/pacifierCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pacifier Switch"
        app:layout_constraintBottom_toTopOf="@+id/currentPrimeText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/findPrimesButton"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/currentPrimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_number_being_checked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pacifierCheckBox" />

</androidx.constraintlayout.widget.ConstraintLayout>